headの基本的な設定完了

--- a/main.html
+++ b/main.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
-
+    <meta charset="uft-8">
+    <title>設計に便利な計算機</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    
+
 </body>
 </html>
