htmlヘッダー部分の基本が完成

--- a/main.html
+++ b/main.html
@@ -6,6 +6,22 @@
 </head>
 
 <body>
+    <header>
+        <div class="header-logo">
+            <h1>茨城高専ロボット部</h1>
+        </div>
+        <ul class="header-list">
+            <li>このサイトについて</li>
+            <li>お問い合わせ先(俺)</li>
+        </ul>
+    </header>
 
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
