--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="uft-8">
+    <meta charset="utf-8">
     <title>設計に便利な計算機</title>
     <link rel="stylesheet" href="main.css">
 </head>
