ヘッダー部分おおよそ完成

--- a/main.html
+++ b/main.html
@@ -7,12 +7,10 @@
 
 <body>
     <header>
-        <div class="header-logo">
-            <h1>茨城高専ロボット部</h1>
-        </div>
+        <h1 class="header-logo">茨城高専ロボット部</h1>
         <ul class="header-list">
             <li>このサイトについて</li>
-            <li>お問い合わせ先(俺)</li>
+            <li>お問い合わせ先は俺</li>
         </ul>
     </header>
 
@@ -21,6 +19,7 @@
     </main>
 
     <footer>
+
 
     </footer>
 </body>
