足回り選択エリアの基本が完成

--- a/main.html
+++ b/main.html
@@ -15,6 +15,43 @@
     </header>
 
     <main>
+        <h3>計算(モーター選定　※エアシリを除く)</h3>
+        <div class="asi-area">
+        <h4>足回り</h4>
+        <div class="asi-block">
+            <img src="メカナム.jpg">
+            <p>メカナム</p>
+        </div>
+        <div class="asi-block">
+            <img src="ステアリング.jpg">
+            <p>ステアリング</p>
+        </div>
+        <div class="asi-block">
+            <img src="三軸オムニ.jpg">
+            <p>オムニ(３軸)</p>
+        </div>
+        <div class="asi-block">
+            <img src="四軸オムニ.jpg">
+            <p>オムニ(４軸)</p>
+        </div>
+        </div>
+
+        <div class="other-area">
+        <h4>その他</h4>
+        <div class="other-block">
+            <img src="">
+            <p>ウインチ</p>
+        </div>
+        <div class="other-block">
+            <img src="">
+            <p>ラック</p>
+        </div>
+        <div class="other-block">
+            <img src="">
+            <p>エアシリンダー</p>
+        </div>
+        </div>
+
 
     </main>
 
