imageファイルから開くようにした

--- a/main.html
+++ b/main.html
@@ -19,19 +19,19 @@
         <div class="asi-area">
         <h4>足回り</h4>
         <div class="asi-block">
-            <img src="メカナム.jpg">
+            <img src="image/メカナム.jpg">
             <p>メカナム</p>
         </div>
         <div class="asi-block">
-            <img src="ステアリング.jpg">
+            <img src="image/ステアリング.jpg">
             <p>ステアリング</p>
         </div>
         <div class="asi-block">
-            <img src="三軸オムニ.jpg">
+            <img src="image/三軸オムニ.jpg">
             <p>オムニ(３軸)</p>
         </div>
         <div class="asi-block">
-            <img src="四軸オムニ.jpg">
+            <img src="image/四軸オムニ.jpg">
             <p>オムニ(４軸)</p>
         </div>
         </div>
