試しにaタグ

--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
             <h4>足回り</h4>
             <div class="asi-block">
                 <img src="image/メカナム.jpg">
+                <a href="mechanum.html"></a>
                 <p>メカナム</p>
             </div>
             <div class="asi-block">
