--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1 class="header-logo">茨城高専ロボット部</h1>
+        <h1 class="header-logo">茨城高専ロボット部/<span>Ibaraki Robot Club</span></h1>
         <ul class="header-list">
             <li>このサイトについて</li>
             <li>お問い合わせ先は俺</li>
@@ -15,40 +15,40 @@
     </header>
 
     <main>
-        <h3>計算(モーター選定　※エアシリを除く)</h3>
+        <h2>□計算/<span>Calculaton</span></h2>
+
         <div class="asi-area">
-            <h4>足回り</h4>
-            <div class="asi-block">
-                <img src="image/メカナム.jpg">
-                <a href="mechanum.html"></a>
-                <p>メカナム</p>
+            <h3>足回り/<span>Undercarriage</span></h3>
+            <div class="contents-block asi">
+                <a href="mechanum.html"> <img src="image/メカナム.jpg"> </a>
+                <p>mechanum</p>
             </div>
-            <div class="asi-block">
-                <img src="image/ステアリング.jpg">
-                <p>ステアリング</p>
+            <div class="contents-block asi">
+                <a href="steering.html"> <img src="image/ステアリング.jpg"> </a>
+                <p>steering</p>
             </div>
-            <div class="asi-block">
-                <img src="image/三軸オムニ.jpg">
-                <p>オムニ(３軸)</p>
+            <div class="contents-block asi">
+                <a href="omuni3.html"> <img src="image/三軸オムニ.jpg"> </a>
+                <p>omuni3</p>
             </div>
-            <div class="asi-block">
-                <img src="image/四軸オムニ.jpg">
-                <p>オムニ(４軸)</p>
+            <div class="contents-block asi">
+                <a href="omuni4.html"> <img src="image/四軸オムニ.jpg"> </a>
+                <p>omuni4</p>
             </div>
         </div>
 
         <div class="other-area">
-            <h4>その他</h4>
-            <div class="other-block">
-                <img src="">
+            <h3>その他/<span>other</span></h3>
+            <div class="contents-block other">
+                <a href=""><img src=""></a>
                 <p>ウインチ</p>
             </div>
-            <div class="other-block">
-                <img src="">
+            <div class="contents-block other">
+                <a herf=""><img src="image/ラック.jpg"></a>
                 <p>ラック</p>
             </div>
-            <div class="other-block">
-                <img src="">
+            <div class="contents-block other">
+                <a herf=""><img src="image/エアシリンダー.jpg"></a>
                 <p>エアシリンダー</p>
             </div>
         </div>
