--- a/mechanum.html
+++ b/mechanum.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>設計に便利な計算機</title>
+    <title>メカナム計算</title>
     <link rel="stylesheet" href="mechanum.css">
 </head>
 
 <body>
+    <header>
+        <h1 class="header-logo">メカナム計算/<span>Mechanum-Calculation</span></h1>
+        <ul class="header-list">
+            <a href="main.html"><li>トップへ戻る</li></a>
+            <li>計算手順</li>
+        </ul>
+    </header>
 
+    <main>
+        <div class="data">
+            <p>マシン重量 <input type="number" value="20" class="inputBox" id="weight" onchange="change()"> kg</p>
+            <p>走行抵抗係数 <input type="number" value="3" min="0" max="100" class="inputBox" id="rrc" onchange="change()"> %</p>
+            <p>機械効率 <input type="number" value="80" min="0" max="100" class="inputBox" id="rrc" onchange="change()"> %</p>
+            <p>地面の傾き <input type="number" value="0" min="0" max="90" class="inputBox" id="slope" onchange="change()"> °</p>
+            <p>ホイール直径 <input type="number" value="0" class="inputBox" id="wheel" onchange="change()"> mm</p>
+            <p>移動速度(X) <input type="number" value="0" class="inputBox" id="v-x" onchange="change()"> m/s</p>
+            <p>移動速度(Y) <input type="number" value="0" class="inputBox" id="v-y" onchange="change()"> m/s</p>
+            <p>旋回速度 <input type="number" value="0" class="inputBox" id="v-r" onchange="change()"> °/s</p>
+            <p>車体幅A <input type="number" value="0" class="inputBox" id="frameA" onchange="change()"> mm</p>
+            <p>車体幅B <input type="number" value="0" class="inputBox" id="frameB" onchange="change()"> mm</p>
+        </div>
+    </main>
+
+    <footer>
+    
+    </footer>
+
+    <script type="text/javascript" src="mechanum.js"></script>
 </body>
 
 </html>
