--- a/winch.html
+++ b/winch.html
@@ -24,8 +24,8 @@
                 <p class="name">重量/Weight</p>
                 <input type="number" value="0" min="0" class="input-Box" id="weight" onchange="change()">
                 <select class="unit" id="wei_unit">
-                    <option id="wei_unit1">kg</option>
-                    <option id="wei_unit2">g</option>
+                    <option value="1">kg</option>
+                    <option value="0.001">g</option>
                 </select>
             </div>
 
@@ -39,8 +39,8 @@
                 <p class="name">ウインチ直径/Diameter</p>
                 <input type="number" value="0" min="0" class="input-Box" id="wheel" onchange="change()">
                 <select class="unit" id="whe_unit">
-                    <option id="whe_unit1">mm</option>
-                    <option id="whe_unit2">cm</option>
+                    <option value="0.001">mm</option>
+                    <option value="0.01">cm</option>
                 </select>
             </div>
 
@@ -48,8 +48,8 @@
                 <p class="name">巻き上げ速度/Speed</p>
                 <input type="number" value="0" min="0" class="input-Box" id="v_y" onchange="change()">
                 <select class="unit" id="v_y_unit">
-                    <option id="v_y_unit1">m/s</option>
-                    <option id="v_y_unit2">mm/s</option>
+                    <option value="1">m/s</option>
+                    <option value="0.001">mm/s</option>
                 </select>
             </div>
 
@@ -78,8 +78,8 @@
                 <p class="name">トルク/Torque</p>
                 <p class="output-Box" id="tor" type="number">0</p>
                 <select class="unit" id="tor_unit">
-                    <option id="tor_unit1">N・m</option>
-                    <option id="tor_unit2">kg・cm</option>
+                    <option value="1">N・m</option>
+                    <option value="10.2">kg・cm</option>
                 </select>
             </div>
         </div>
