--- a/mechanum.html
+++ b/mechanum.html
@@ -15,18 +15,131 @@
     </header>
 
     <main>
-        <div class="data">
-            <p>マシン重量 <input type="number" value="20" class="inputBox" id="weight" onchange="change()"> kg</p>
-            <p>走行抵抗係数 <input type="number" value="3" min="0" max="100" class="inputBox" id="rrc" onchange="change()"> %</p>
-            <p>機械効率 <input type="number" value="80" min="0" max="100" class="inputBox" id="rrc" onchange="change()"> %</p>
-            <p>地面の傾き <input type="number" value="0" min="0" max="90" class="inputBox" id="slope" onchange="change()"> °</p>
-            <p>ホイール直径 <input type="number" value="0" class="inputBox" id="wheel" onchange="change()"> mm</p>
-            <p>移動速度(X) <input type="number" value="0" class="inputBox" id="v-x" onchange="change()"> m/s</p>
-            <p>移動速度(Y) <input type="number" value="0" class="inputBox" id="v-y" onchange="change()"> m/s</p>
-            <p>旋回速度 <input type="number" value="0" class="inputBox" id="v-r" onchange="change()"> °/s</p>
-            <p>車体幅A <input type="number" value="0" class="inputBox" id="frameA" onchange="change()"> mm</p>
-            <p>車体幅B <input type="number" value="0" class="inputBox" id="frameB" onchange="change()"> mm</p>
+        <div class="mechanum">
+            <img class="mechanum-img" src="image/メカナム計算用画像.jpg">
         </div>
+
+        <!--　入力欄　-->
+        <div class="input-collection">
+
+            <div class="data">
+                <p class="name">マシン重量/Weight</p>
+                <input type="number" value="20" min="0" class="input-Box" id="weight" onchange="change()">
+                <select class="unit" id="wei_unit">
+                    <option value="1">kg</option>
+                    <option value="0.001">g</option>
+                </select>
+            </div>
+
+            <div class="data">
+                <p class="name">走行抵抗係数/Running resistance</p> 
+                <input type="number" value="3" min="0" max="100" class="input-Box" id="run_res" onchange="change()">
+                <p class="unit">%</p>
+            </div>
+
+            <div class="data">
+                <p class="name">機械効率/Mechanical Efficiency</p> 
+                <input type="number" value="80" min="0" max="100" class="input-Box" id="me" onchange="change()">
+                <p class="unit">%</p>
+            </div>
+
+            <div class="data">
+                <p class="name">地面の傾き/slope</p> 
+                <input type="number" value="0" min="0" max="90" class="input-Box" id="slope" onchange="change()">
+                <p class="unit">°</p>
+            </div>
+
+            <div class="data">
+                <p class="name">ホイール直径/Diameter</p>
+                <input type="number" value="100" min="0" class="input-Box" id="wheel" onchange="change()">
+                <select class="unit" id="whe_unit">
+                    <option value="0.001">mm</option>
+                    <option value="0.01">cm</option>
+                    <option value="1">m</option>
+                </select>
+            </div>
+
+            <div class="data">
+                <p class="name">移動速度[X]/Speed</p>
+                <input type="number" value="0.5" min="0" class="input-Box" id="v_x" onchange="change()">
+                <select class="unit" id="v_x_unit">
+                    <option value="1">m/s</option>
+                    <option value="0.01">cm/s</option>
+                    <option value="0.001">mm/s</option>
+                    <option value="0.2777">km/h</option>
+                </select>
+            </div>
+
+            <div class="data">
+                <p class="name">移動速度[Y]/Speed</p>
+                <input type="number" value="0" min="0" class="input-Box" id="v_y" onchange="change()">
+                <select class="unit" id="v_y_unit">
+                    <option value="1">m/s</option>
+                    <option value="0.01">cm/s</option>
+                    <option value="0.001">mm/s</option>
+                    <option value="0.2777">km/h</option>
+                </select>
+            </div>
+
+            <div class="data">
+                <p class="name">旋回速度/TurnSpeed</p>
+                <input type="number" value="0" min="0" class="input-Box" id="v_t" onchange="change()">
+                <p class="unit">°/s</p>
+            </div>
+
+            <div class="data">
+                <p class="name">車体幅A/Body width</p>
+                <input type="number" value="0" min="0" class="input-Box" id="widthA" onchange="change()">
+                <select class="unit" id="widthA_unit">
+                    <option value="0.001">mm</option>
+                    <option value="0.01">cm</option>
+                    <option value="1">m</option>
+                </select>
+            </div>
+
+            <div class="data">
+                <p class="name">車体幅B/Body width</p>
+                <input type="number" value="0" min="0" class="input-Box" id="widthB" onchange="change()">
+                <select class="unit" id="widthB_unit">
+                    <option value="0.001">mm</option>
+                    <option value="0.01">cm</option>
+                    <option value="1">m</option>
+                </select>
+            </div>
+
+            <!-- 計算ボタン -->
+            <button class="cal-button" onclick="clickBtn1()">-計算/Calculate-</button>
+            <!--リセットボタン-->
+            <button class="cal-button" onclick="clickBtn2()">-リセット/Reset-</button>
+            
+        </div>
+
+    <!--　計算結果表示　-->
+        <div class="output-collection">
+            <div class="data">
+                <p class="name">出力/Power</p>
+                <p class="output-Box" id="power" type="number">0</p>
+                <p class="unit">W</p>
+            </div>
+
+            <div class="data">
+                <p class="name">回転数/Revolutions</p>
+                <p class="output-Box" id="rpm" type="number">0</p>
+                <p class="unit">rpm</p>
+            </div>
+
+            <div class="data">
+                <p class="name">トルク/Torque</p>
+                <p class="output-Box" id="tor" type="number">0</p>
+                <select class="unit" id="tor_unit">
+                    <option value="1">N・m</option>
+                    <option value="0.102">kg・m</option>
+                    <option value="10.2">kg・cm</option>
+                    <option value="10200">g・cm</option>
+                </select>
+            </div>
+        </div>
+        
     </main>
 
     <footer>
