--- a/winch.html
+++ b/winch.html
@@ -41,6 +41,7 @@
                 <select class="unit" id="whe_unit">
                     <option value="0.001">mm</option>
                     <option value="0.01">cm</option>
+                    <option value="1">m</option>
                 </select>
             </div>
 
@@ -49,6 +50,7 @@
                 <input type="number" value="0" min="0" class="input-Box" id="v_y" onchange="change()">
                 <select class="unit" id="v_y_unit">
                     <option value="1">m/s</option>
+                    <option value="0.01">cm/s</option>
                     <option value="0.001">mm/s</option>
                 </select>
             </div>
@@ -79,7 +81,9 @@
                 <p class="output-Box" id="tor" type="number">0</p>
                 <select class="unit" id="tor_unit">
                     <option value="1">N・m</option>
+                    <option value="0.102">kg・m</option>
                     <option value="10.2">kg・cm</option>
+                    <option value="10200">g・cm</option>
                 </select>
             </div>
         </div>
