--- a/mechanum.html
+++ b/mechanum.html
@@ -155,7 +155,7 @@
                 <td class="output_list" id="wheel2_p">0</td>
                 <td class="output_list" id="wheel3_p">0</td>
                 <td class="output_list" id="wheel4_p">0</td>
-                <td class="output_list" id="p_unit">[W]</td>
+                <td id="p_unit">[W]</td>
                 </tr>
                 <tr>
                 <th>回転数</th>
@@ -163,7 +163,7 @@
                 <td class="output_list" id="wheel2_r">0</td>
                 <td class="output_list" id="wheel3_r">0</td>
                 <td class="output_list" id="wheel4_r">0</td>
-                <td class="output_list" id="r_unit">[rpm]</td>
+                <td id="r_unit">[rpm]</td>
                 </tr>
                 <tr>
                 <th>トルク</th>
@@ -171,7 +171,7 @@
                 <td class="output_list" id="wheel2_t">0</td>
                 <td class="output_list" id="wheel3_t">0</td>
                 <td class="output_list" id="wheel4_t">0</td>
-                <td class="output_list" id="t_unit">[N・m]</td>
+                <td id="t_unit">[N・m]</td>
                 </tr>
                 </tbody>
 
