--- a/main.html
+++ b/main.html
@@ -15,50 +15,57 @@
     </header>
 
     <main>
-        <h2>□計算/<span>Calculaton</span></h2>
+        <h2>□計算/<span>Calculation</span></h2>
 
         <div class="asi-area">
-            <h3>足回り/<span>Undercarriage</span></h3>
+            <h3>足回り/<span>Undercarriage</span> モーターの必要回転数、トルク、出力を計算</h3>
             <div class="contents-block asi">
-                <a href="mechanum.html"> <img src="image/メカナム.jpg"> </a>
-                <p>mechanum</p>
+                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick=""> <img src="image/メカナム.jpg"> </a>
+                <p>Mechanum</p>
             </div>
             <div class="contents-block asi">
-                <a href="steering.html"> <img src="image/ステアリング.jpg"> </a>
-                <p>steering</p>
+                <a href="steering.html" target="_blank" rel="noopener noreferrer"> <img src="image/ステアリング.jpg"> </a>
+                <p>Steering</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni3.html"> <img src="image/三軸オムニ.jpg"> </a>
-                <p>omuni3</p>
+                <a href="omuni3.html" target="_blank" rel="noopener noreferrer"> <img src="image/三軸オムニ.jpg"> </a>
+                <p>Omuni3</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni4.html"> <img src="image/四軸オムニ.jpg"> </a>
-                <p>omuni4</p>
+                <a href="omuni4.html" target="_blank" rel="noopener noreferrer"> <img src="image/四軸オムニ.jpg"> </a>
+                <p>Omuni4</p>
             </div>
         </div>
 
         <div class="other-area">
-            <h3>その他/<span>other</span></h3>
+            <h3>その他/<span>Other</span></h3>
             <div class="contents-block other">
-                <a href=""><img src=""></a>
-                <p>ウインチ</p>
+                <a href="winch.html" target="_blank" rel="noopener noreferrer"><img src="image/ウインチ.jpg"></a>
+                <p>Winch</p>
             </div>
             <div class="contents-block other">
-                <a herf=""><img src="image/ラック.jpg"></a>
-                <p>ラック</p>
+                <a herf="rack.html" target="_blank" rel="noopener noreferrer"><img src="image/ラック.jpg"></a>
+                <p>Rack</p>
             </div>
             <div class="contents-block other">
-                <a herf=""><img src="image/エアシリンダー.jpg"></a>
-                <p>エアシリンダー</p>
+                <a herf="air-cylinder.html" target="_blank" rel="noopener noreferrer"><img src="image/エアシリンダー.jpg"></a>
+                <p>Air-cylinder</p>
             </div>
         </div>
 
+        <h2>□図鑑/<span>Picture book</span> ※開発検討中</h2>
 
     </main>
 
     <footer>
 
-
     </footer>
+
+    <audio id="btnsound" preload="auto">
+        <source src="sound/decision17.mp3">
+    </audio>
+    <audio id="mechanum_select" preload="auto">
+        <source src="car-engine1.mp3">
+    </audio>
 </body>
 </html>
