メカナム効果音追加

--- a/mechanum.html
+++ b/mechanum.html
@@ -184,6 +184,12 @@
     
     </footer>
 
+    <audio id="btnsound" preload="auto">
+        <source src="sound/decision17.mp3">
+    </audio>
+    <audio id="errersound" preload="auto">
+        <source src="sound/warning1.mp3">
+    </audio>
     <script type="text/javascript" src="mechanum.js"></script>
 </body>
 
