効果音追加

--- a/main.html
+++ b/main.html
@@ -20,19 +20,19 @@
         <div class="asi-area">
             <h3>足回り/<span>Undercarriage</span> モーターの必要回転数、トルク、出力を計算</h3>
             <div class="contents-block asi">
-                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick=""> <img src="image/メカナム.jpg"> </a>
+                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/メカナム.jpg"> </a>
                 <p>Mechanum</p>
             </div>
             <div class="contents-block asi">
-                <a href="steering.html" target="_blank" rel="noopener noreferrer"> <img src="image/ステアリング.jpg"> </a>
+                <a href="steering.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/ステアリング.jpg"> </a>
                 <p>Steering</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni3.html" target="_blank" rel="noopener noreferrer"> <img src="image/三軸オムニ.jpg"> </a>
+                <a href="omuni3.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/三軸オムニ.jpg"> </a>
                 <p>Omuni3</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni4.html" target="_blank" rel="noopener noreferrer"> <img src="image/四軸オムニ.jpg"> </a>
+                <a href="omuni4.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/四軸オムニ.jpg"> </a>
                 <p>Omuni4</p>
             </div>
         </div>
@@ -40,15 +40,15 @@
         <div class="other-area">
             <h3>その他/<span>Other</span></h3>
             <div class="contents-block other">
-                <a href="winch.html" target="_blank" rel="noopener noreferrer"><img src="image/ウインチ.jpg"></a>
+                <a href="winch.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/ウインチ.jpg"></a>
                 <p>Winch</p>
             </div>
             <div class="contents-block other">
-                <a herf="rack.html" target="_blank" rel="noopener noreferrer"><img src="image/ラック.jpg"></a>
+                <a herf="rack.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/ラック.jpg"></a>
                 <p>Rack</p>
             </div>
             <div class="contents-block other">
-                <a herf="air-cylinder.html" target="_blank" rel="noopener noreferrer"><img src="image/エアシリンダー.jpg"></a>
+                <a herf="air-cylinder.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/エアシリンダー.jpg"></a>
                 <p>Air-cylinder</p>
             </div>
         </div>
@@ -64,8 +64,9 @@
     <audio id="btnsound" preload="auto">
         <source src="sound/decision17.mp3">
     </audio>
-    <audio id="mechanum_select" preload="auto">
-        <source src="car-engine1.mp3">
+    <audio id="select" preload="auto">
+        <source src="sound/decision3.mp3">
     </audio>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
