weightが0のとき警告(黄色)追加

--- a/mechanum.html
+++ b/mechanum.html
@@ -23,7 +23,7 @@
         <div class="input-collection">
 
             <div class="data">
-                <p class="name" >マシン重量/Weight</p>
+                <p class="name" id="weight_name">マシン重量/Weight</p>
                 <input type="number" value="0" min="0" class="input-Box" id="weight">
                 <select class="unit sp1" id="wei_unit">
                     <option value="1">kg</option>
